--- a/java/mysql/1.MySQL架构设计.md
+++ b/java/mysql/1.MySQL架构设计.md
@@ -1,4 +1,4 @@
-![MySQL架构设计](1-MySQL架构设计\MySQL架构设计.png)
+![image-20210324142448331](E:\zhzhf-javaDoc\java\mysql\1-MySQL架构设计\image-20210324142448331.png)
 
 1. MySQL驱动：
 
