--- a/java/架构/eureka/1.微服务概览.md
+++ b/java/架构/eureka/1.微服务概览.md
@@ -20,7 +20,7 @@
 
 ## **二、微服务解决单块应用产生的问题**
 
-​    ![微服务解决单块应用产生的问题](1.微服务概览.assets\微服务解决单块应用产生的问题.png)
+​    ![微服务解决单块应用产生的问题](1-微服务概览.assets/微服务解决单块应用产生的问题.png)
 
 1. **代码复用性问题**
 
@@ -107,6 +107,3 @@
    4. 全链路压测
    5. 系统回滚
 
-   
-
-- 1. 
