--- a/java/架构/eureka/2.Eureka服务注册中心.md
+++ b/java/架构/eureka/2.Eureka服务注册中心.md
@@ -1,10 +1,10 @@
 ## **一、服务注册中心基本原理**
 
-![服务注册中心基本原理](2.Eureka服务注册中心.assets\服务注册中心基本原理.png)
+![服务注册中心基本原理](2-Eureka服务注册中心.assets/服务注册中心基本原理.png)
 
 ## **二、服务注册中心集群**
 
-![服务注册中心集群](2.Eureka服务注册中心.assets\服务注册中心集群.png)
+![服务注册中心集群](2-Eureka服务注册中心.assets/服务注册中心集群.png)
 
 ## **三、健康自检机制**
 
