--- a/java/架构/eureka/3.Eureka源码.md
+++ b/java/架构/eureka/3.Eureka源码.md
@@ -47,7 +47,7 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 
 **1）项目依赖：build.gradle**
 
-![项目依赖](3.Eureka源码.assets\项目依赖.png)
+![项目依赖](3-Eureka源码.assets/项目依赖.png)
 
 1. eureka client：eureka server也是一个eureka client，因为后面我们讲到eureka server集群模式的时候，eureka server也要扮演eureka client的角色，往其他的eureka server上去注册。
 2. eureka core：扮演了核心的注册中心的角色，接收别人的服务注册请求，提供服务发现的功能，保持心跳（续约请求），摘除故障服务实例。eureka server依赖eureka core的，基于eureka core的功能对外暴露接口，提供注册中心的功能
@@ -55,7 +55,7 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 4. mocktio：mock测试框架，之前项目阶段一里面，我们大量用了mockito框架，来写单元测试。在eureka框架里面，他每个工程都是有src/test/java的哦，里面都写了针对自己本工程的单元测试，必须得写。mock就是用的mockito框架。
 5. jetty：方便你测试的，测试的时候，是会基于jetty直接将eureka server作为一个web应用给跑起来，jetty作为web容器，跑起来eureka server这个web应用。跑起来之后，eureka server不就活在jetty web容器里面了，jersey对外暴露了一些restful接口，然后测试类里，就可以基于jersey的客户端，发送http请求，调用eureka server暴露的restful接口，测试比如说：服务注册、心跳、服务实例摘除，等等功能。
 
-![打包](3.Eureka源码.assets\打包.png)
+![打包](3-Eureka源码.assets/打包.png)
 
 1. 把这个eureka-server工程，打成一个war包，会怎么样，会将eureka-resources下面的那些jsp、js、css给搞到这个war包里面去，然后就可以跑起来，提供一个index页面。我们之前启动了eureka-server之后，第一件事儿就是访问他的控制台，可以去看看有谁来注册了。控制台的代码，就在jsp里面，就是eureka-resources的jsp提供的，人家还有对应的css和js呢。
 2. 人家eureka-server的web.xml里，设置好了welcome-file-list，就是status.jsp页面，这个页面就会在打war包的时候，从eureka-resources里面给打到eureka-server里的，eureka-server里就会包含jsp目录，里面就有这个status.jsp。我们之前看到的那个eureka控制台的页面，就是这个status.jsp，里面一堆jsp代码，把你注册的服务的信息，全部都提出来，显示到页面上去。
@@ -67,11 +67,11 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 
 **3）web.xml**
 
-![listener](3.Eureka源码.assets\listener.png)
+![listener](3-Eureka源码.assets/listener.png)
 
 1. 最最重要的就是listener，listener是在web应用启动的时候就会执行的，负责对这个web应用进行初始化的事儿，我们如果自己写个web应用，也经常会写一个listener，在里面搞一堆初始化的代码，比如说，启动一些后台线程，加载个配置文件。com.netflix.eureka.EurekaBootStrap
 
-![filter1](3.Eureka源码.assets\filter1.png)
+![filter1](3-Eureka源码.assets/filter1.png)
 
 1. 又连着4个Filter，任何一个请求都会经过这些filter，这些filter会对每个请求都进行处理，这个4个filter都在eureka-core里面
 
@@ -83,12 +83,12 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 
    （4）GzipEncodingEnforcingFilter：gzip，压缩相关的；encoding，编码相关的
 
-![filter2](3.Eureka源码.assets\filter2.png)
+![filter2](3-Eureka源码.assets/filter2.png)
 
 1. jersey框架的一个ServletContainer的一个filter，我可以告诉大家，类似于每个mvc框架，比如说struts2和spring web mvc，都会搞一个自己的核心filter，或者是核心servlet，配置在web.xml里，用了框架之后，相当于就是将web请求的处理入口交给框架了，框架会根据你的配置，自动帮你干很多事儿，最后调用你的一些处理逻辑。
 2. jersey也是一样的，这里的这个ServletContainer就是一个核心filter，接收所有的请求，作为请求的入口，处理之后来调用你写的代码逻辑。
 
-![filter-mapping](3.Eureka源码.assets\filter-mapping.png)
+![filter-mapping](3-Eureka源码.assets/filter-mapping.png)
 
 1. filter-mapping是配置这些filter在哪些目录下生效。
 
@@ -97,6 +97,6 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
    3. GzipEncodingEnforcingFilter，/v2/apps相关的请求，会走这里，仅仅对部分特殊的请求生效
    4. jersey核心filter，是拦截所有的请求的
 
-![welcome-file-list](3.Eureka源码.assets\welcome-file-list.png)
+![welcome-file-list](3-Eureka源码.assets/welcome-file-list.png)
 
 1. welcome-file-list，是配置了status.jsp是欢迎页面，首页，eureka-server的控制台页面，展示注册服务的信息
