--- a/java/架构/eureka/4.java内存模型与volatile关键字.md
+++ b/java/架构/eureka/4.java内存模型与volatile关键字.md
@@ -24,7 +24,7 @@ new Thread() {
 
 以上代码实际执行如下：
 
-![java内存模型](4.java内存模型与volatile关键字.assets\java内存模型.png)
+![java内存模型](4-java内存模型与volatile关键字.assets/java内存模型.png)
 
 1. Java内存模型中，所有的变量都存储在主内存中，每条线程还有自己的工作内存，线程对变量的所有操作都必须在工作内存中进行，不能直接读写主内存中的变量；不同的线程之间也无法直接访问对方工作内存中的变量，线程间变量值的传递均需通过主内存完成。
 
@@ -135,4 +135,4 @@ volatile关键字是用来解决可见性和有序性，在有些罕见的条件
 
 （2）内存屏障：volatile禁止指令重排序 
 
-![内存屏障](4.java内存模型与volatile关键字.assets\内存屏障.png)
+![内存屏障](4-java内存模型与volatile关键字.assets/内存屏障.png)
