--- a/java/架构/eureka/3.Eureka源码.md
+++ b/java/架构/eureka/3.Eureka源码.md
@@ -27,12 +27,9 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 **3.eurka源码**
 
 1. eureka server的启动，相当于是注册中心的启动 -> 启动的过程搞清楚，初始化了哪些东西
-
 2. eureka client的启动，相当于是服务的启动，初始化了哪些东西
-
 3. eureka运行的核心的流程
-
-4. 1. eureka client往eureka server注册的过程，服务注册
+   1. eureka client往eureka server注册的过程，服务注册
    2. eureka client从eureka server获取注册表的过程,服务发现
    3. eureka client定时往eureka server发送续约通知（心跳）,服务心跳
    4. 服务实例摘除
@@ -91,8 +88,7 @@ spring cloud Edgware.SR3对应的是netflix eureka的1.7.2的版本
 ![filter-mapping](3-Eureka源码.assets/filter-mapping.png)
 
 1. filter-mapping是配置这些filter在哪些目录下生效。
-
-2. 1. StatusFilter和RequestAuthFilter，一看就是通用的处理逻辑，是对所有的请求都开放的
+   1. StatusFilter和RequestAuthFilter，一看就是通用的处理逻辑，是对所有的请求都开放的
    2. RateLimitingFilter，默认是不开启的，如果你要打开eureka-server内置的限流功能，你需要自己把RateLimitingFilter的的注释打开，让这个filter生效
    3. GzipEncodingEnforcingFilter，/v2/apps相关的请求，会走这里，仅仅对部分特殊的请求生效
    4. jersey核心filter，是拦截所有的请求的
