--- a/java/mysql/1.MySQL架构设计.md
+++ b/java/mysql/1.MySQL架构设计.md
@@ -1,42 +1,26 @@
 ![MySQL架构设计](1-MySQL架构设计/MySQL架构设计.png)
 
 1. MySQL驱动：
-
-2. 1. MySQL驱动底层会跟数据库建立网络连接，接着才能发送请求给数据库服务器。
-
-3. 数据库连接池：
-
-4. 1. 避免多个线程频繁的创建和销毁数据库连接，效率低下，造成资源的浪费。
+   1. MySQL驱动底层会跟数据库建立网络连接，接着才能发送请求给数据库服务器。
+2. 数据库连接池：
+   1. 避免多个线程频繁的创建和销毁数据库连接，效率低下，造成资源的浪费。
    2. 所以引入池的概念，创建多个数据库连接，执行时使用该连接，执行完成后放回池子里，等待其他线程使用。
-
-5. SQL接口：
-
-6. 1. MySQL内部提供了一个组件，就是SQL接口（SQL Interface），他是一套执行SQL语句的接口，专门用于执行我们发送给MySQL的那些增删改查的SQL语句。
-
-7. 查询解析器：
-
-8. 1. 让MySQL能看懂SQL语句
-
+3. SQL接口：
+   1. MySQL内部提供了一个组件，就是SQL接口（SQL Interface），他是一套执行SQL语句的接口，专门用于执行我们发送给MySQL的那些增删改查的SQL语句。
+4. 查询解析器：
+   1. 让MySQL能看懂SQL语句
    2. 例如：select id,name,age from users where id=1
-
-   3. 1. 我们现在要从“users”表里查询数据
+      1. 我们现在要从“users”表里查询数据
       2. 查询“id”字段的值等于1的那行数据
       3. 对查出来的那行数据要提取里面的“id,name,age”三个字段。
+5. 查询优化器：
+   1. 选择最优的查询路径
+   2. 例如：select id,name,age from users where id=1
 
-9. 查询优化器：
-
-10. 1. 选择最优的查询路径
-
-    2. 例如：select id,name,age from users where id=1
-
-    3. 1. 第一个路径：直接定位到“users”表中的“id”字段等于1的一行数据，然后查出来那行数据的“id,name,age”三个字段的值就可以了
-       2. 第二个路径：先把“users”表中的每一行数据的“id,name,age”三个字段的值都查出来，然后从这批数据里过滤出来“id”字段等于1的那行数据的“id,name,age”三个字段
-
-11. 执行器：
-
-12. 1. 执行器就是去根据我们的优化器生成的一套执行计划，然后不停的调用存储引擎的各种接口去完成SQL语句的执行计划，大致就是不停的更新或者提取一些数据出来。
-
-13. 存储引擎：
-
-14. 1. 存储引擎其实就是执行SQL语句的，他会按照一定的步骤去查询内存缓存数据，更新磁盘数据，查询磁盘数据，等等，执行诸如此类的一系列的操作。
-    2. 常见的存储引擎有：InnoDB、MyISAM、Memory等等，MySQL一般都是使用InnoDB存储引擎
+   3. 1. 第一个路径：直接定位到“users”表中的“id”字段等于1的一行数据，然后查出来那行数据的“id,name,age”三个字段的值就可以了
+      2. 第二个路径：先把“users”表中的每一行数据的“id,name,age”三个字段的值都查出来，然后从这批数据里过滤出来“id”字段等于1的那行数据的“id,name,age”三个字段
+6. 执行器：
+   1. 执行器就是去根据我们的优化器生成的一套执行计划，然后不停的调用存储引擎的各种接口去完成SQL语句的执行计划，大致就是不停的更新或者提取一些数据出来。
+7. 存储引擎：
+   1. 存储引擎其实就是执行SQL语句的，他会按照一定的步骤去查询内存缓存数据，更新磁盘数据，查询磁盘数据，等等，执行诸如此类的一系列的操作。
+   2. 常见的存储引擎有：InnoDB、MyISAM、Memory等等，MySQL一般都是使用InnoDB存储引擎
