--- a/java/架构/eureka/1.微服务概览.md
+++ b/java/架构/eureka/1.微服务概览.md
@@ -1,42 +1,28 @@
 ## 一、几十人开发一个复杂的单块系统，会有哪些问题
 
 1. **代码复用性问题：**
-
-2. 1. 各写各的，重复代码(sql/方法)到处都是。
-
-3. **多人协作效率问题：**
-
-4. 1. 多人同时修改一套代码，代码冲突
+   1. 各写各的，重复代码(sql/方法)到处都是。
+2. **多人协作效率问题：**
+   1. 多人同时修改一套代码，代码冲突
    2. 自己的功能上线，可能影响到别人的服务，依赖的东西非常多
-
-5. **扩容问题**
-
-6. 1. 服务扩容全都耦合在一起，有些服务是不需要扩容的，资源浪费
+3. **扩容问题**
+   1. 服务扩容全都耦合在一起，有些服务是不需要扩容的，资源浪费
    2. 服务扩容需要保证系统是无状态的，在内存里保存的数据需要考虑扩容产生的影响。
-
-7. **可用性问题**
-
-8. 1. 某个边缘服务的方法出问题了，导致cpu打满，导致整个服务全部挂掉
+4. **可用性问题**
+   1. 某个边缘服务的方法出问题了，导致cpu打满，导致整个服务全部挂掉
 
 ## **二、微服务解决单块应用产生的问题**
 
 ​    ![微服务解决单块应用产生的问题](1-微服务概览.assets/微服务解决单块应用产生的问题.png)
 
 1. **代码复用性问题**
-
-2. 1. 每个中心拆成独立的服务，每个服务都有自己的库。各个服务之间数据库是屏蔽的，想要某个查询只能让服务的负责人去开发对应的接口
-
-3. **多人协作效率问题**
-
-4. 1. 每个人负责自己的服务修改即可
-
-5. **扩容问题**
-
-6. 1. 服务扩容可以单独扩容自己的服务
-
-7. **可用性问题**
-
-8. 1. 某个服务部署的机器cpu打满之后，不会影响到其他服务。直接就将该服务熔断降级了
+   1. 每个中心拆成独立的服务，每个服务都有自己的库。各个服务之间数据库是屏蔽的，想要某个查询只能让服务的负责人去开发对应的接口
+2. **多人协作效率问题**
+   1. 每个人负责自己的服务修改即可
+3. **扩容问题**
+   1. 服务扩容可以单独扩容自己的服务
+4. **可用性问题**
+   1. 某个服务部署的机器cpu打满之后，不会影响到其他服务。直接就将该服务熔断降级了
 
 ## **三、微服务基础技术架构**
 
@@ -68,38 +54,38 @@
 
 2. ##### DevOps + 持续集成 + 持续交付
 
-3. 1. jenkins
+   1. jenkins
    2. 自动化测试
    3. 自动化部署
 
-4. ##### 微服务支撑运维平台
+3. ##### 微服务支撑运维平台
 
-5. 1. 日志中心：ELK + Kafka + 自研组件，亿级大规模日志中心架构设计
+   1. 日志中心：ELK + Kafka + 自研组件，亿级大规模日志中心架构设计
    2. 机器与Metrics监控：OpenFalcon
    3. 配置中心：Apollo
 
-6. ##### 敏捷开发和项目管理
+4. ##### 敏捷开发和项目管理
 
-7. ##### 微服务治理平台
+5. ##### 微服务治理平台
 
    类似于大众点评的CAT，实现了调用链跟踪的监控。但是CAT实际上在国内应用不广泛，存在很多问题。
 
    自研调用链监控的整套微服务治理平台：
 
-   - 1. 服务分层
-     2. 服务鉴权
-     3. 故障诊断
-     4. 容量预估以及扩容告警
-     5. 可用性监测
-     6. QPS、请求量、响应时间的监测
-     7. 性能瓶颈定位
-     8. 调用链跟踪
-     9. 接口版本
-     10. 服务上下线审批
-     11. 流量控制
-     12. 等等……
+   	1. 服务分层
+   	2. 服务鉴权
+   	3. 故障诊断
+   	4. 容量预估以及扩容告警
+   	5. 可用性监测
+   	6. QPS、请求量、响应时间的监测
+   	7. 性能瓶颈定位
+   	8. 调用链跟踪
+   	9. 接口版本
+   	10. 服务上下线审批
+   	11. 流量控制
+   	12. 等等……
 
-8. ##### 线上生产环境的工程事件：
+6. ##### 线上生产环境的工程事件：
 
    1. A/B测试
    2. 蓝绿部署
