--- a/java/mysql/1.MySQL架构设计.md
+++ b/java/mysql/1.MySQL架构设计.md
@@ -16,8 +16,7 @@
 5. 查询优化器：
    1. 选择最优的查询路径
    2. 例如：select id,name,age from users where id=1
-
-   3. 1. 第一个路径：直接定位到“users”表中的“id”字段等于1的一行数据，然后查出来那行数据的“id,name,age”三个字段的值就可以了
+      1. 第一个路径：直接定位到“users”表中的“id”字段等于1的一行数据，然后查出来那行数据的“id,name,age”三个字段的值就可以了
       2. 第二个路径：先把“users”表中的每一行数据的“id,name,age”三个字段的值都查出来，然后从这批数据里过滤出来“id”字段等于1的那行数据的“id,name,age”三个字段
 6. 执行器：
    1. 执行器就是去根据我们的优化器生成的一套执行计划，然后不停的调用存储引擎的各种接口去完成SQL语句的执行计划，大致就是不停的更新或者提取一些数据出来。
